--- a/src/components/WeatherCard/index.css
+++ b/src/components/WeatherCard/index.css
@@ -1,9 +1,13 @@
 .container {
   width: 95vw;
   height: 30vh;
-  background: linear-gradient(to top right,#74b9ff, #0984e3);
+  background: linear-gradient(to top left,#74b9ff, #0984e3);
 
   border-radius: 5px;
+
+  box-shadow: 3px 3px 5px #74b9ff;
+
+  box-sizing: border-box;
 }
 
 .top {
@@ -12,20 +16,60 @@
 
   display: flex;
   flex-direction: row;
+
+  color: white;
+
 }
 .top-left {
-  width: 50%;
+  width: 30%;
   height: 100%;
 
   -moz-border-radius-topleft: 5px;
+
+  padding-left: 40rpx;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
+
+.top-left view:nth-child(1) {
+  display: flex;
+  flex-direction: row;
+
+  align-items: center;
+}
+
+.top-left view:nth-child(2) {
+  font-weight: normal;
+  font-size: 70rpx;
+  position: relative;
+}
+
+.top-left view:nth-child(2) text {
+  font-size: 40rpx;
+  position: absolute;
+  top: 10rpx;
+
+}
+
 .top-right {
-  width: 50%;
+  width: 70%;
   height: 100%;
   -moz-border-radius-topright: 5px ;
 
+  padding-right: 20rpx;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  letter-spacing: .1em;
 }
 
+.top-right>view:last-child {
+  font-size: 26rpx;
+}
 
 .bottom {
   width: 100%;
