--- a/src/pages/Profile/index.css
+++ b/src/pages/Profile/index.css
@@ -1,6 +1,11 @@
 .content {
   width: 100vw;
-  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .person {
@@ -36,20 +41,25 @@
   width: 130rpx;
   height: 130rpx;
   border-radius: 50%;
-  border: 1px solid white;
+  border: 1px green white;
 }
 
 .tools {
+
   width: 700rpx;
   height: 315rpx;
-  /* 居中 */
-  transform: translate(25rpx,-90rpx);
+  margin-bottom: 30rpx;
+  margin-top: 30rpx;
+  padding-bottom: 30rpx;
+
   border-radius: 5rpx;
   background-color: white;
   box-shadow: 0 3px #eaeaea;
   display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
 }
 
 .item{
@@ -77,9 +87,9 @@
 .function{
   width: 700rpx;
   height: 235rpx;
-  transform: translateX(25rpx);
   border-radius: 5rpx;
   background-color: white;
+  box-shadow: 0 3px #eaeaea;
 }
 .function img{
   width: 38rpx;
@@ -116,9 +126,10 @@
   margin-top: 25rpx;
   width: 700rpx;
   height: auto;
-  transform: translateX(25rpx);
   border-radius: 5rpx;
   background-color: white;
+  box-shadow: 0 3px #eaeaea;
+  margin-bottom: 30rpx;
 }
 .added-item{
   width: 100%;
